[package]
name = "subspace-test-client"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", features = ["derive"] }
evm-domain-test-runtime = { version = "0.1.0", path = "../../domains/test/runtime/evm" }
fp-evm = { version = "3.0.0-dev", git = "https://github.com/subspace/frontier", rev = "101e738bffde36e866bc6baaca606d1e486fc695" }
futures = "0.3.28"
schnorrkel = "0.9.1"
sc-chain-spec = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-consensus-subspace = { version = "0.1.0", path = "../../crates/sc-consensus-subspace" }
sc-executor = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-service = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6", default-features = false }
sp-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-consensus-subspace = { version = "0.1.0", path = "../../crates/sp-consensus-subspace" }
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-domains = { version = "0.1.0", path = "../../crates/sp-domains" }
sp-domains-fraud-proof = { version = "0.1.0", path = "../../crates/sp-domains-fraud-proof" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
subspace-archiving = { path = "../../crates/subspace-archiving" }
subspace-core-primitives = { path = "../../crates/subspace-core-primitives" }
subspace-erasure-coding = { path = "../../crates/subspace-erasure-coding" }
subspace-farmer-components = { path = "../../crates/subspace-farmer-components" }
subspace-proof-of-space = { path = "../../crates/subspace-proof-of-space" }
subspace-runtime-primitives = { path = "../../crates/subspace-runtime-primitives" }
subspace-service = { path = "../../crates/subspace-service" }
subspace-test-runtime = { version = "0.1.0", path = "../subspace-test-runtime" }
zeroize = "1.6.0"

[features]
do-not-enforce-cost-of-storage = [
    "subspace-test-runtime/do-not-enforce-cost-of-storage",
]
