[package]
name = "subspace-test-service"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.73"
cross-domain-message-gossip = { version = "0.1.0", path = "../../domains/client/cross-domain-message-gossip" }
codec = { package = "parity-scale-codec", version = "3.2.1", features = ["derive"] }
domain-runtime-primitives = { version = "0.1.0", path = "../../domains/primitives/runtime" }
futures = "0.3.28"
futures-timer = "3.0.1"
jsonrpsee = { version = "0.16.3", features = ["server"] }
rand = "0.8.5"
pallet-domains = { version = "0.1.0", path = "../../crates/pallet-domains" }
parking_lot = "0.12.1"
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-executor = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-network = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-network-sync = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-service = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6", default-features = false }
sc-tracing = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-application-crypto = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-blockchain = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-consensus-subspace = { version = "0.1.0", path = "../../crates/sp-consensus-subspace" }
sp-consensus-slots = { version = "0.10.0-dev", default-features = false, git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-domains = { version = "0.1.0", path = "../../crates/sp-domains" }
sp-domains-fraud-proof = { version = "0.1.0", path = "../../crates/sp-domains-fraud-proof" }
sp-externalities = { version = "0.19.0", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-keyring = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
subspace-core-primitives = { version = "0.1.0", default-features = false, path = "../../crates/subspace-core-primitives" }
subspace-runtime-primitives = { path = "../../crates/subspace-runtime-primitives" }
subspace-service = { path = "../../crates/subspace-service" }
subspace-test-client = { path = "../subspace-test-client" }
subspace-test-runtime = { version = "0.1.0", path = "../subspace-test-runtime" }
tokio = "1.32.0"
tracing = "0.1.37"

[dev-dependencies]
sp-keyring = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }

[features]
do-not-enforce-cost-of-storage = [
    "subspace-test-runtime/do-not-enforce-cost-of-storage",
]
