[package]
name = "domain-block-builder"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", features = ["derive"] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-state-machine = { version = "0.28.0", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
tracing = "0.1.37"

[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
