[package]
name = "domain-client-consensus-relay-chain"
description = "The relay-chain provided consensus algorithm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.73"
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
substrate-prometheus-endpoint = { git = "https://github.com/subspace/polkadot-sdk", rev = "0a9b5b5a6841d22b5edb92dfee950d56270bfdd6" }
